--- a/index.html
+++ b/index.html
@@ -1,11 +1,76 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <style>
+            body {
+                font-family: '{font}', sans-serif !important;
+                font-size: 1em;
+                margin: 0;
+            }
+            *, *::before, *::after {
+                box-sizing: border-box;
+            }
+            button {
+                border: none;
+            }
+            h1, h2, h3, h4, h5, h6 {
+                margin-top: 0;
+            }
+            p {
+                padding: 0;
+                margin: 0;
+                padding-top: 5px;
+                padding-bottom: 5px;
+            }
+            li {
+                padding-top: 5px;
+                padding-bottom: 5px;
+            }
+            a {
+                color: inherit;
+                text-decoration: none;
+            }
+            ul {
+                padding: 0;
+                margin: 0;
+            }
+            img {
+                max-width: 100%;
+            }
+           .trusted-collaborators{
+                background-color: rgb(224, 221, 30);
+                padding: 50px 20px;
+            }
+            .trusted-collaborators-container{
+                max-width: 1200px;
+                display: flex;
+                gap: 30px;
+                margin: auto;
+                justify-content: space-around;
+            }
+            .trusted-collaborators-container img{
+                padding: 5px;
+                transition: transform 0.3s ease;
+            }
+            .trusted-collaborators-container img:hover{
+                transform: translateY(20px);
+            }
+        </style>
+    </head>
+    <body>
+	    <section class="trusted-collaborators">
+            <div class="trusted-collaborators-container">
+                <img src="images/partners/6_part.png" alt="collaborator">
+                <img src="images/partners/5_part.png" alt="collaborator">
+                <img src="images/partners/7_part.png" alt="collaborator">
+                <img src="images/partners/2_part.png" alt="collaborator">
+                <img src="images/partners/1_part.png" alt="collaborator">
+                <img src="images/partners/0_part.png" alt="collaborator">
+            </div>
+        </section>
+    </body>
 </html>
