--- a/index.html
+++ b/index.html
@@ -54,10 +54,14 @@
             }
             .trusted-collaborators-container img{
                 padding: 5px;
+                opacity: 0.36;
+                transition: all 0.35s;
                 transition: transform 0.3s ease;
             }
-            .trusted-collaborators-container img:hover{
-                transform: translateY(20px);
+            .trusted-collaborators-container img:hover {
+                /* transform: translateY(20px); */
+                opacity:1;
+                animation: beat 1.5s ease 0s infinite;
             }
         </style>
     </head>
