--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 max-width: 100%;
             }
            .trusted-collaborators{
-                background-color: rgb(224, 221, 30);
+                background-color: #eece38;
                 padding: 50px 20px;
             }
             .trusted-collaborators-container{
@@ -54,7 +54,7 @@
             }
             .trusted-collaborators-container img{
                 padding: 5px;
-                opacity: 0.36;
+                opacity: 0.56;
                 transition: all 0.35s;
                 transition: transform 0.3s ease;
             }
