--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
             }
            .trusted-collaborators{
                 background-color: #eece38;
-                padding: 50px 20px;
             }
             .trusted-collaborators-container{
                 max-width: 1200px;
+            }
+            .trusted-collaborators-child{
                 display: flex;
                 gap: 30px;
                 margin: auto;
@@ -67,12 +68,14 @@
     <body>
 	    <section class="trusted-collaborators">
             <div class="trusted-collaborators-container">
-                <img src="images/partners/6_part.png" alt="collaborator">
-                <img src="images/partners/5_part.png" alt="collaborator">
-                <img src="images/partners/7_part.png" alt="collaborator">
-                <img src="images/partners/2_part.png" alt="collaborator">
-                <img src="images/partners/1_part.png" alt="collaborator">
-                <img src="images/partners/0_part.png" alt="collaborator">
+                <div class="trusted-collaborators-child">
+                    <img src="images/partners/6_part.png" alt="collaborator">
+                    <img src="images/partners/5_part.png" alt="collaborator">
+                    <img src="images/partners/7_part.png" alt="collaborator">
+                    <img src="images/partners/2_part.png" alt="collaborator">
+                    <img src="images/partners/1_part.png" alt="collaborator">
+                    <img src="images/partners/0_part.png" alt="collaborator">
+                </div>
             </div>
         </section>
     </body>
