--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                 display: flex;
                 gap: 30px;
                 margin: auto;
-                justify-content: space-around;
+                justify-content: center;
+                align-items: center;
             }
             .trusted-collaborators-container img{
                 padding: 5px;
@@ -69,12 +70,24 @@
 	    <section class="trusted-collaborators">
             <div class="trusted-collaborators-container">
                 <div class="trusted-collaborators-child">
-                    <img src="images/partners/6_part.png" alt="collaborator">
-                    <img src="images/partners/5_part.png" alt="collaborator">
-                    <img src="images/partners/7_part.png" alt="collaborator">
-                    <img src="images/partners/2_part.png" alt="collaborator">
-                    <img src="images/partners/1_part.png" alt="collaborator">
-                    <img src="images/partners/0_part.png" alt="collaborator">
+                    <div class="trusted-collaborators-child-image">
+                        <img src="images/partners/6_part.png" alt="collaborator">
+                    </div>
+                    <div class="trusted-collaborators-child-image">
+                        <img src="images/partners/5_part.png" alt="collaborator">
+                    </div>
+                    <div class="trusted-collaborators-child-image">
+                        <img src="images/partners/7_part.png" alt="collaborator">
+                    </div>
+                    <div class="trusted-collaborators-child-image">
+                        <img src="images/partners/2_part.png" alt="collaborator">
+                    </div>
+                    <div class="trusted-collaborators-child-image">
+                        <img src="images/partners/1_part.png" alt="collaborator">
+                    </div>
+                    <div class="trusted-collaborators-child-image">
+                        <img src="images/partners/0_part.png" alt="collaborator">
+                    </div>
                 </div>
             </div>
         </section>
