--- a/index.html
+++ b/index.html
@@ -54,13 +54,16 @@
                 justify-content: center;
                 align-items: center;
             }
-            .trusted-collaborators-container img{
+            .trusted-collaborators-child-image{
+
+            }
+            .trusted-collaborators-child-image img{
                 padding: 5px;
                 opacity: 0.56;
                 transition: all 0.35s;
                 transition: transform 0.3s ease;
             }
-            .trusted-collaborators-container img:hover {
+            .trusted-collaborators-child-image img:hover {
                 opacity:1;
                 animation: beat 1.5s ease 0s infinite;
             }
