--- a/index.html
+++ b/index.html
@@ -53,15 +53,23 @@
                 margin: auto;
                 justify-content: center;
                 align-items: center;
+                width: 100%;
             }
             .trusted-collaborators-child-image{
-
+                width: 20%;
             }
             .trusted-collaborators-child-image img{
+                width: 100%;
+                height: auto;
+                object-fit: contain;
                 padding: 5px;
                 opacity: 0.56;
                 transition: all 0.35s;
                 transition: transform 0.3s ease;
+            }
+            .trusted-collaborators-child-image img:nth-child(2){
+                opacity: 1;
+                
             }
             .trusted-collaborators-child-image img:hover {
                 opacity:1;
