--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
                 height: auto;
                 object-fit: contain;
                 padding: 5px;
-                opacity: 0.56;
-                transition: all 0.35s;
+                opacity: 0.46;
+                /* transition: all 0.35s; */
                 transition: transform 0.3s ease;
             }
-            .trusted-collaborators-child-image img:nth-child(2){
+            .trusted-collaborators-child-image:nth-child(1) img{
                 opacity: 1;
-                
+                animation: pulse 1.5s ease 0s infinite;
             }
             .trusted-collaborators-child-image img:hover {
                 opacity:1;
