--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             }
             .trusted-collaborators-child-image{
                 width: 20%;
+                
             }
             .trusted-collaborators-child-image img{
                 width: 100%;
@@ -64,16 +65,27 @@
                 object-fit: contain;
                 padding: 5px;
                 opacity: 0.46;
-                /* transition: all 0.35s; */
-                transition: transform 0.3s ease;
             }
             .trusted-collaborators-child-image:nth-child(1) img{
                 opacity: 1;
-                animation: pulse 1.5s ease 0s infinite;
+                transform: scale(1);
+	            animation: pulse 2s infinite;
             }
+            @keyframes pulse {
+	            0% {
+		            transform: scale(0.95);
+		        }
+	            70% {
+		            transform: scale(1);
+	            }
+                100% {
+		            transform: scale(0.95);
+                }
+}
             .trusted-collaborators-child-image img:hover {
                 opacity:1;
-                animation: beat 1.5s ease 0s infinite;
+                transform: scale(1);
+	            animation: pulse 2s infinite;
             }
         </style>
     </head>
