--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             }
            .trusted-collaborators{
                 background-color: #eece38;
+                padding: 80px 0;
             }
             .trusted-collaborators-container{
                 max-width: 1200px;
