--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
                 padding: 80px 0;
             }
             .trusted-collaborators-container{
-                max-width: 1200px;
+                max-width: 1310px;
+                width: 100%;
+                padding: 0 16px;
+                margin: 0 auto;
             }
             .trusted-collaborators-child{
                 display: flex;
