--- a/index.html
+++ b/index.html
@@ -91,6 +91,20 @@
                 transform: scale(1);
 	            animation: pulse 2s infinite;
             }
+            /*-----------------------------*/
+            .trending-items {
+                padding: 80px 0;
+            }
+            .trending-items-container {
+                max-width: 1310px;
+                width: 100%;
+                padding: 0 16px;
+                margin: 0 auto;
+            }
+            .trending-items-shell {
+                display: flex;
+                gap: 15px;
+            }
         </style>
     </head>
     <body>
@@ -115,6 +129,13 @@
                     <div class="trusted-collaborators-child-image">
                         <img src="images/partners/0_part.png" alt="collaborator">
                     </div>
+                </div>
+            </div>
+        </section>
+        <section class="trending-items">
+            <div class="trending-items-container">
+                <div class="trending-items-shell">
+
                 </div>
             </div>
         </section>
