--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
                 padding: 0 16px;
                 margin: 0 auto;
             }
+            .trending-items-title{
+                font-size: 46px;
+                margin: 0;
+                text-transform: capitalize;
+                text-align: center;
+            }
             .trending-items-shell {
                 display: flex;
                 gap: 15px;
@@ -134,6 +140,7 @@
         </section>
         <section class="trending-items">
             <div class="trending-items-container">
+                <h2 class="trending-items-title">Послуги</h2>
                 <div class="trending-items-shell">
 
                 </div>
