--- a/index.html
+++ b/index.html
@@ -134,6 +134,20 @@
                 width: 100%;
                 transition: all 0.5s ease;
             }
+            .trending-body-icon{
+                width: 100px;
+                height: 100px;
+                line-height: 100px;
+                text-align: center;
+                background-color: var(--white-color);
+                border-radius: 50%;
+                position: relative;
+                z-index: 1;
+                margin: -70px auto 15px auto;
+                box-shadow: 0.5px 0.87px 27px rgba(35, 31, 32, 0.04);
+                transform: scaleX(1);
+                transition: all 0.5s ease;
+            }
         </style>
     </head>
     <body>
@@ -168,6 +182,9 @@
                     <div class="trending-items-body">
                         <div class="trending-items-images">
                             <img src="images/gallery/5-gallery.jpg" alt="trending">
+                        </div>
+                        <div class="trending-body-icon">
+
                         </div>
                     </div>
                 </div>
