--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 height: 100px;
                 line-height: 100px;
                 text-align: center;
-                background-color: var(--white-color);
+                background-color: #fff;
                 border-radius: 50%;
                 position: relative;
                 z-index: 1;
