--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             }
             .trending-items-title{
                 font-size: 46px;
-                margin: 0;
+                margin: 50px;
                 text-transform: capitalize;
                 text-align: center;
             }
@@ -111,6 +111,7 @@
                 display: flex;
                 gap: 15px;
                 width: 100%;
+                justify-content: center;
             }
             .trending-items-body{
                 width: 23%;
@@ -129,6 +130,7 @@
                 border-radius: 10px;
             }
             .trending-items-images img{
+                object-fit: contain;
                 transform: scale(1);
                 border-radius: 10px;
                 width: 100%;
