--- a/index.html
+++ b/index.html
@@ -168,6 +168,11 @@
             .trending-link-btn{
                 display: flex;
                 justify-content: center;
+                gap: 15px;
+            }
+            .trending-link-btn svg{
+                width: 20px;
+                height: 20px;
             }
         </style>
     </head>
@@ -216,6 +221,7 @@
                             <p class="trending-body-text">Интернет-портал — web-сайт, содержащий разнообразные интерактивные сервисы (поиск, почта, новости, форумы, обслуживание, голосование и др.), функционирующие в рамках...</p>
                             <div class="trending-link-btn">
                                 <a href="">Читати Далі</a>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h13M12 5l7 7-7 7"/></svg>
                             </div>
                         </div>
                     </div>
