--- a/index.html
+++ b/index.html
@@ -119,9 +119,6 @@
                 text-align: center;
                 display: flex;
                 flex-direction: column;
-                /* padding-bottom: 22px;
-                margin-bottom: 10px;
-                transition: all 0.5s ease; */
                 border-radius: 10px;
                 box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.05);
             }
@@ -185,6 +182,9 @@
             .trending-items-body:hover .trending-body-icon {
                 transform: scaleX(-1);
                 background-color: #0E68A8;
+            }
+            .trending-items-body:nth-child(2n+1) {
+                margin-top: 30px;
             }
         </style>
     </head>
