--- a/index.html
+++ b/index.html
@@ -186,6 +186,51 @@
             .trending-items-body:nth-child(2n+1) {
                 margin-top: 30px;
             }
+            /*----------------------------*/
+            .spotlight-stories{
+                padding: 80px 0;
+            }
+            .spotlight-stories-container {
+                max-width: 1310px;
+                width: 100%;
+                padding: 0 16px;
+                margin: 0 auto;
+            }
+            .spotlight-stories-title{
+                margin-bottom: 50px;
+                font-size: 36px;
+                font-weight: 600;
+                text-transform: capitalize;
+                text-align: center;
+            }
+            .spotlight-stories-shell{
+                display: flex;
+                gap: 30px;
+                width: 100%;
+                justify-content: center;
+            }
+            .spotlight-stories-blog{
+                width: 30%;
+                background-color: #fff;
+                border-radius: 6px;
+                transition: all 0.5s ease;
+                margin-bottom: 8px;
+                box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.05);
+            }
+            .spotlight-stories-blog-image{
+                position: relative;
+                margin-bottom: 0;
+                overflow: hidden;
+                border-radius: 6px;
+                width: 100%;
+            }
+            .spotlight-stories-blog-image img{
+                border-radius: 6px;
+                transform: scale(1);
+                transition: all 0.4s ease;
+                object-fit: cover;
+                height: 300px;
+            }
         </style>
     </head>
     <body>
@@ -295,6 +340,18 @@
                                 <a href="">Читати Далі</a>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h13M12 5l7 7-7 7"/></svg>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="spotlight-stories">
+            <div class="spotlight-stories-container">
+                <h2 class="spotlight-stories-title">Популярні статті</h2>
+                <div class="spotlight-stories-shell">
+                    <div class="spotlight-stories-blog">
+                        <div class="spotlight-stories-blog-image">
+                            <img src="images/gallery/1-gallery.jpg" alt="stories-blog">
                         </div>
                     </div>
                 </div>
