--- a/index.html
+++ b/index.html
@@ -226,10 +226,12 @@
             }
             .spotlight-stories-blog-image img{
                 border-radius: 6px;
-                transform: scale(1);
-                transition: all 0.4s ease;
                 object-fit: cover;
                 height: 300px;
+            }
+            .spotlight-stories-blog-image:hover img{
+                transform: scale(1.1);
+                transition: all 0.4s ease;
             }
             .blog-meta2{
                 position: absolute;
@@ -260,20 +262,13 @@
                 border-radius: 6px;
             }
             .blog-meta-user-com{
-                /* background-color: transparent;
-                text-align: center;
-                border-radius: 6px;
-                margin-bottom: 15px;
-                font-size: 14px;
-                line-height: 28px;
-                font-weight: 400;
-                display: inline-block;
-                position: relative; */
                 display: flex;
                 gap: 15px;
                 text-align: center;
                 justify-content: start;
                 align-items: center;
+                background-color: #0E68A8;
+                border-radius: 6px;
             }
             .blog-meta-user-com svg{
                 width: 20px;
@@ -283,12 +278,22 @@
                 font-size: 14px;
             }
             .spotlight-stories-blog-title{
-                margin: 0;
+                margin-top: 10px;
                 font-size: 16px;
-                color: #0F6CAE;
                 line-height: 1.25;
                 text-transform: capitalize;
                 font-weight: 600;
+                text-align: center;
+            }
+            .spotlight-stories-blog-title:hover{
+                color: #0E67A6;
+            }
+            .spotlight-stories-blog-text{
+                font-size: 12px;
+                margin-bottom: 15px;
+            }
+            .blog-link-btn{
+                color: #0F6CAE;
             }
         </style>
     </head>
@@ -424,6 +429,50 @@
                             <a href="">
                                 <h3 class="spotlight-stories-blog-title">Создание интернет портала</h3>
                             </a>
+                            <p class="spotlight-stories-blog-text">Интернет-портал — web-сайт, содержащий разнообразные интерактивные сервисы (поиск, почта, новости, форумы, обслуживание, голосование и др.), функционирующие в рамках... </p>
+                            <a href="" class="blog-link-btn"> Читати Далі</a>
+                        </div>
+
+                    </div>
+                    <div class="spotlight-stories-blog">
+                        <div class="spotlight-stories-blog-image">
+                            <img src="images/gallery/0-gallery.jpg" alt="stories-blog">
+                            <div class="blog-meta2">
+                                <span class="day">15</span>
+                                <span class="month">August</span>
+                            </div>
+                        </div>
+                        <div class="spotlight-stories-blog-content">
+                            <div class="blog-meta-user-com">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
+                                <p class="user">Lorem Lorem</p>
+                            </div>
+                            <a href="">
+                                <h3 class="spotlight-stories-blog-title">Разработка CRM для интернет магазина и малого бизнеса</h3>
+                            </a>
+                            <p class="spotlight-stories-blog-text">Если вы хотите прокачать свой бизнес и начать новый этап в управлении командой, советуем узнать больше о CRM-системах. CRM-система расшифровывается как Customer Relationship... </p>
+                            <a href="" class="blog-link-btn"> Читати Далі</a>
+                        </div>
+
+                    </div>
+                    <div class="spotlight-stories-blog">
+                        <div class="spotlight-stories-blog-image">
+                            <img src="images/gallery/10-gallery.jpg" alt="stories-blog">
+                            <div class="blog-meta2">
+                                <span class="day">15</span>
+                                <span class="month">August</span>
+                            </div>
+                        </div>
+                        <div class="spotlight-stories-blog-content">
+                            <div class="blog-meta-user-com">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
+                                <p class="user">Lorem Lorem</p>
+                            </div>
+                            <a href="">
+                                <h3 class="spotlight-stories-blog-title">Cоздание landing page (одностраничного сайта)</h3>
+                            </a>
+                            <p class="spotlight-stories-blog-text">Вы хотите получить результат от вложенных инвестиций как можно скорее?Тогда решение «Быстрый старт» от нашей команды идеально вам подходит. Опираясь на... </p>
+                            <a href="" class="blog-link-btn"> Читати Далі</a>
                         </div>
 
                     </div>
