--- a/index.html
+++ b/index.html
@@ -295,6 +295,54 @@
             .blog-link-btn{
                 color: #0F6CAE;
             }
+            /*-------------------------*/
+            .our-accomplishments{
+                padding: 80px 0;
+            }
+            .our-accomplishments-container{
+                max-width: 1310px;
+                width: 100%;
+                padding: 0 16px;
+                margin: 0 auto;
+            }
+            .our-accomplishments-title{
+                margin-bottom: 50px;
+                font-size: 36px;
+                font-weight: 600;
+                text-transform: capitalize;
+                text-align: center;
+            }
+            .our-accomplishments-shell{
+                display: flex;
+                gap: 10px;
+                width: 100%;
+                justify-content: center;
+            }
+            .our-accomplishments-body{
+                width: 23%;
+                background-color: #fff;
+                text-align: center;
+                box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.0509803922);
+                padding-bottom: 22px;
+                border-radius: 10px;
+                position: relative;
+                overflow: hidden;
+                transition: all 0.5s ease;
+            }
+            .our-accomplishments-body-image{
+                overflow: hidden;
+                border-radius: 10px;
+                display: block;
+                transform: all 0.5s ease;
+            }
+            .our-accomplishments-body-image img{
+                transform: scale(1);
+                border-radius: 10px;
+                width: 100%;
+                transition: all 0.5s ease;
+                height: 200px;
+                object-fit: contain;
+            }
         </style>
     </head>
     <body>
@@ -475,6 +523,18 @@
                             <a href="" class="blog-link-btn"> Читати Далі</a>
                         </div>
 
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="our-accomplishments">
+            <div class="our-accomplishments-container">
+                <h2 class="our-accomplishments-title">Наші переваги</h2>
+                <div class="our-accomplishments-shell">
+                    <div class="our-accomplishments-body">
+                        <div class="our-accomplishments-body-image">
+                            <img src="images/gallery/11-gallery.jpg" alt="preference">
+                        </div>
                     </div>
                 </div>
             </div>
