--- a/index.html
+++ b/index.html
@@ -343,6 +343,24 @@
                 height: 200px;
                 object-fit: contain;
             }
+            .our-accomplishments-body-icon{
+                width: 90px;
+                height: 90px;
+                line-height: 85px;
+                text-align: center;
+                background-color: #fff;
+                border-radius: 50%;
+                position: relative;
+                z-index: 1;
+                margin: -70px auto 38px auto;
+                box-shadow: 0.5px 0.87px 27px rgba(35, 31, 32, 0.04);
+                border: 10px solid #35ACDF;
+                transition: all 0.5s ease;
+            }
+            .our-accomplishments-body-icon svg{
+                width: 70px;
+                height: 70px;
+            }
         </style>
     </head>
     <body>
@@ -534,6 +552,9 @@
                     <div class="our-accomplishments-body">
                         <div class="our-accomplishments-body-image">
                             <img src="images/gallery/11-gallery.jpg" alt="preference">
+                        </div>
+                        <div class="our-accomplishments-body-icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg>
                         </div>
                     </div>
                 </div>
