--- a/index.html
+++ b/index.html
@@ -346,13 +346,12 @@
             .our-accomplishments-body-icon{
                 width: 90px;
                 height: 90px;
-                line-height: 85px;
                 text-align: center;
                 background-color: #fff;
                 border-radius: 50%;
                 position: relative;
                 z-index: 1;
-                margin: -70px auto 38px auto;
+                margin: -50px auto 8px auto;
                 box-shadow: 0.5px 0.87px 27px rgba(35, 31, 32, 0.04);
                 border: 10px solid #35ACDF;
                 transition: all 0.5s ease;
@@ -360,6 +359,11 @@
             .our-accomplishments-body-icon svg{
                 width: 70px;
                 height: 70px;
+            }
+            .our-accomplishments-text{
+                padding: 0px 16px;
+                font-size: 16px;
+                font-weight: 600;
             }
         </style>
     </head>
@@ -556,6 +560,7 @@
                         <div class="our-accomplishments-body-icon">
                             <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg>
                         </div>
+                       <p class="our-accomplishments-text">Ми активно розвиваємося і розширюємо наші пропозиції, віддаючи пріоритет динамічному розвитку.</p>
                     </div>
                 </div>
             </div>
